This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

30-Nov-2004 (Lars Duening)  (3.3.623)
  - (comm.c) Fixed a memory leak when a no-bank input_to was denied (Bug
       #0000143)

29-Nov-2004 (Lars Duening)  (3.3.622)
  - (interpret.c) When indexing a string for assignment, the driver failed
       to duplicate the string, leading to interesting effects if the string
       was used as mapping key (reported by Andre).

27-Nov-2004 (Lars Duening)  (3.3.621)
  - (interpret.c) When calling inherited functions in objects with virtual
       parents, the function adjusting the offsets always returned NULL
       instead of the pointer to the parent. This was a fallout from the
       closure change.

26-Nov-2004 (Lars Duening)  (3.3.620)
  - (Makefile.in, doc/man/ldmud.1) Added the automatic generation of a manpage
       from the drivers '--longhelp' output.
  - (src/bugs, src/done, src/wk) Moved the data from these directories
       into the bugtracker.

26-Nov-2004 (Lars Duening)  (3.3.618, .619)
  - (closure.c) Calls to explicitely inherited lfun closures weren't compiled
       correctly in lambda()s (Bug #0000145).

25-Nov-2004 (Lars Duening)  (3.3.617)
  - (prolang.y) When the new inline closures were disabled, the LPC compiler
       produced incomplete code for the inline closure constants, and
       the interpreter didn't interpret it correctly either.

24-Nov-2004 (Lars Duening)  (3.3.616)
  - (closure, gcollect.c, interpret.c, object.c prolang) Implemented proper
       closures explicitely referencing inherited functions.

22-Nov-2004 (Lars Duening)  (3.3.615)
  - (comm.c) Efun net_connect(): on multihomed machines the created
       socket is bound to the hostname given with the --hostname option (Bug
       #0000137).

15-Nov-2004 (Lars Duening)  (3.3.614)
  - (efuns.c) You learn a new thing every day: I never realized that