@@ -53,16 +53,19 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 623)
-(Parent-Version lpmud 3-3 622)
+(Project-Version lpmud 3-3 624)
+(Parent-Version lpmud 3-3 623)
 (Version-Log "
-  - (comm.c) Fixed a memory leak when a no-bank input_to was denied (Bug
-       #0000143)
+  - (erq/erq.c) The erq errorneously assumed a constant data length
+       when receiving UDP packets (thanks, Tobias!)
+  - (comm.c, object.c) The driver didn't check if the privilege_violation()
+       called for input_to() or rename_object() destructed the object
+       in question (Bug #0000316).
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Tue, 30 Nov 2004 21:16:17 -0700")
+(Checkin-Time "Fri, 03 Dec 2004 23:20:24 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -100,7 +103,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.12 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.83 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.686 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.687 644))
   (HISTORY (lpmud/f/49_HISTORY 1.384 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -170,7 +173,7 @@
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.30 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.21 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.25 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.99 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.100 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.41 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.27 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
@@ -210,7 +213,7 @@
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/my-stdint.h (lpmud/u/b/39_my-stdint. 1.2 644))
   (src/object.h (lpmud/44_object.h 1.34.1.19.1.6 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.88.1.52 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.88.1.53 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.8 644))
   (src/parser.c (lpmud/l/13_parser.c 1.1 644))
@@ -441,7 +444,7 @@
 
   (src/util/erq/Makefile.in (lpmud/c/11_Makefile.i 1.1.1.5 644))
   (src/util/erq/erq.h (lpmud/d/26_erq.h 1.1.1.4.1.2 644))
-  (src/util/erq/erq.c (lpmud/d/27_erq.c 1.1.1.8.1.6.1.4.1.6 644))
+  (src/util/erq/erq.c (lpmud/d/27_erq.c 1.1.1.8.1.6.1.4.1.7 644))
 
   (src/util/xerq/socket.c (lpmud/k/21_socket.c 1.9.1.4.1.6 644))
   (src/util/xerq/lpc/www/who.c (lpmud/k/22_who.c 1.2 644))
